--- a/web/views/homepage.ejs
+++ b/web/views/homepage.ejs
@@ -11,6 +11,54 @@
 <script>
   var login = '<%= login %>';
   var mostRecentPost;
+  var private_invites = [];
+	var group_invites = [];
+	
+	function updatePrivateInvites(initialize) {
+  	$.post('/getPrivateInvites', {}, function (data) {
+  		if (!initialize) {
+  			let updatedInvites = data.invites;
+	        for (var i = 0; i < group_invites.length; i++) {
+	          let invite = private_invites[i];
+	          if (!updatedInvites.some(item => item.sender.S == invite.sender.S)) {
+	            private_invites.splice(i, 1);
+	            i--;
+	          }
+	        }
+	        updatedInvites.forEach(invite => {
+	          if (!private_invites.some(item => item.sender.S == invite.sender.S)) {              
+	            private_invites.push(invite);
+	            $('#invite-alert').attr("hidden", false);
+	          }
+	        });	
+  		} else {
+  			private_invites = data.invites;
+  		}
+  	});
+  }
+  
+  function updateGroupInvites(initialize) {
+  	$.post('/getGroupInvites', {}, function (data) {
+  		if (!initialize) {
+  			let updatedInvites = data.invites;
+	        for (var i = 0; i < group_invites.length; i++) {
+	          let invite = group_invites[i];
+	          if (!updatedInvites.some(item => item.chat_id.S == invite.chat_id.S)) {
+	            group_invites.splice(i, 1);
+	            i--;
+	          }
+	        }
+	        updatedInvites.forEach(invite => {    
+	          if (!group_invites.some(item => item.chat_id.S == invite.chat_id.S)) {                
+	            group_invites.push(invite);
+	            $('#invite-alert').attr("hidden", false);
+	          }
+	        });	
+  		} else {
+  			group_invites = data.invites;
+  		}
+  	});
+  }
   
   function makePostHelper(msg, login, timestamp, post_id) {
       var message = document.createElement("li");
@@ -178,12 +226,20 @@
     mostRecentPost = $('ul#posts li:first').find("#timestamp").attr('name');
     
     refreshPosts();
+    updatePrivateInvites(true);
+    updateGroupInvites(true);
     setInterval(function() {
       refreshPosts();
+      updatePrivateInvites(false);
+      updateGroupInvites(false);
     }, 10000);
   });
 </script>
 <body>
+	<div class="alert" id="invite-alert" hidden="hidden">
+	 	<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+	 	You have new chat invites! Check the start chat page to accept or decline the invite.
+	 </div> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/homepage">PennBook</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
