--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -19,6 +19,54 @@
 	var friendsList = [];
 	var mostRecentPost;
 	var interests = <%- JSON.stringify(interests) %>;
+	var private_invites = [];
+	var group_invites = [];
+	
+	function updatePrivateInvites(initialize) {
+  	$.post('/getPrivateInvites', {}, function (data) {
+  		if (!initialize) {
+  			let updatedInvites = data.invites;
+	        for (var i = 0; i < group_invites.length; i++) {
+	          let invite = private_invites[i];
+	          if (!updatedInvites.some(item => item.sender.S == invite.sender.S)) {
+	            private_invites.splice(i, 1);
+	            i--;
+	          }
+	        }
+	        updatedInvites.forEach(invite => {
+	          if (!private_invites.some(item => item.sender.S == invite.sender.S)) {              
+	            private_invites.push(invite);
+	            $('#invite-alert').attr("hidden", false);
+	          }
+	        });	
+  		} else {
+  			private_invites = data.invites;
+  		}
+  	});
+  }
+  
+  function updateGroupInvites(initialize) {
+  	$.post('/getGroupInvites', {}, function (data) {
+  		if (!initialize) {
+  			let updatedInvites = data.invites;
+	        for (var i = 0; i < group_invites.length; i++) {
+	          let invite = group_invites[i];
+	          if (!updatedInvites.some(item => item.chat_id.S == invite.chat_id.S)) {
+	            group_invites.splice(i, 1);
+	            i--;
+	          }
+	        }
+	        updatedInvites.forEach(invite => {    
+	          if (!group_invites.some(item => item.chat_id.S == invite.chat_id.S)) {                
+	            group_invites.push(invite);
+	            $('#invite-alert').attr("hidden", false);
+	          }
+	        });	
+  		} else {
+  			group_invites = data.invites;
+  		}
+  	});
+  }
 
 	var are_friends = false;
 	function checkFriends() {
@@ -343,10 +391,14 @@
 	  }
 	  updateFriendList();
 	  refreshPosts();
+      updatePrivateInvites(true);
+      updateGroupInvites(true);
 	  setInterval(function() {
 		  if (curr_user != login) {
 			  checkFriends();
 	    }
+	      updatePrivateInvites(false);
+	      updateGroupInvites(false);
 		  updateFriendList();
 		  refreshPosts();
 	  }, 10000);
@@ -359,6 +411,10 @@
 "Wellness", "Parenting", "Home & Living", "Style & Beauty", "Divorce", "Weddings", "Food & Drink",
 "Money", "Environment", "Culture & Arts"]; %>
 <body>
+	<div class="alert" id="invite-alert" hidden="hidden">
+	 	<span class="closebtn" onclick="this.parentElement.hidden='hidden';">&times;</span>
+	 	You have new chat invites! Check the start chat page to accept or decline the invites.
+	 </div> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/homepage">PennBook</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
